--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,60 @@ nav ul a:hover:after {
     margin-bottom: 15px;
     transition: 0.3s;
 }
+
+.parceiros h3,
+.parceiros p{
+    text-align: center;
+}
+
+.parceiros .container div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.parceiros .container div img {
+    width: 150px;
+}
+
+/* footer*/
+
+footer {
+    background-color: rgb(24, 24, 24);
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+  }
+  
+#footer-container {
+    display: flex;
+    flex-wrap: wrap; /* Permitir que os elementos dentro do footer sejam envoltos em várias linhas */
+    justify-content: space-around;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+.footer-section {
+    flex: 1 1 300px; /* Definir largura mínima e máxima para cada seção do footer */
+    margin: 10px;
+  }
+  
+.footer-section h3 {
+    margin-bottom: 10px;
+  }
+  
+.footer-section p, .footer-section a {
+    color: white;
+    text-decoration: none;
+    line-height: 1.6;
+  }
+  
+footer .footer-section a {
+    display: block;
+    margin-bottom: 5px;
+  }
+  
+.footer-section a:hover {
+      text-decoration: underline;
+  }
