--- a/css/style.css
+++ b/css/style.css
@@ -251,3 +251,31 @@ footer .footer-section a {
 .footer-section a:hover {
       text-decoration: underline;
   }
+
+/* sobre */
+
+.sobre .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sobre .sobre-texto {
+    width: 50%;
+    padding-right: 50px;
+}
+
+.sobre .sobre-texto p {
+    margin: 18px 0;
+    color: #000007;
+}
+
+.sobre .sobre-img{
+    width: 50%;
+}
+
+.sobre .sobre-img img {
+    width: 60%;
+    border-radius: 10px;
+    margin-left: 100px;
+}
