--- a/css/style.css
+++ b/css/style.css
@@ -433,3 +433,270 @@ footer .footer-section a {
 .mensagem-sucesso-login {
     color: green;
 }
+
+/* about */
+
+.team-container {
+    width: 90%;
+    margin: 20px auto;
+}
+
+.team-container h2 {
+    font-size: 56px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.team-members {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.member {
+    background: #d3e6fd;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    padding: 20px;
+    border-radius: 8px;
+    width: calc(49% - 2px);
+    text-align: center;
+    height: 370px;
+}
+
+.member img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+}
+
+.member h4 {
+    font-size: 24px; 
+    margin-bottom: 5px;
+}
+
+.member p {
+    font-size: 18px; 
+    margin-bottom: 5px; 
+    color: #000007;
+}
+
+/* modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .conteudo-modal {
+    background-color: #fff;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .fechar {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .fechar:hover,
+  .fechar:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  #modalSoft h2 {
+    margin-bottom: 10px;
+}
+
+#modalSoft p {
+    line-height: 1.6;
+    margin-bottom: 20px;
+    color: #000007;
+}
+
+#modalMerg p {
+    color: #000007;
+}
+
+#modalMerg h2 {
+    margin-bottom: 10px;
+}
+
+#modalMergGratis p {
+    color: #000007;
+}
+
+#modalMergGratis h2 {
+    margin-bottom: 10px;
+}
+/* pontuaçao */
+
+#despejo-materiais {
+    margin: 50px auto;
+    padding: 20px;
+    border: 2px solid #004d99;
+    border-radius: 10px;
+    max-width: 500px;
+    background-color: #f8f9fa;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+#despejo-materiais h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #004d99;
+}
+
+#despejo-materiais label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    color: #333;
+}
+
+#despejo-materiais select,
+#despejo-materiais input[type="number"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#despejo-materiais button {
+    background-color: #004d99;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#despejo-materiais button:hover {
+    background-color: #003366;
+}
+
+#despejo-materiais p {
+    margin-top: 10px;
+    font-weight: bold;
+    color: #004d99;
+}
+
+#mensagem {
+    display: none;
+    background-color: #d4edda;
+    color: #155724;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+/* modal login-sucesso */
+
+/* CSS para os modals */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: auto;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.menu-lateral {
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin-top: 20px;
+    width: 200px; /* Ajuste conforme necessário */
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media screen and (max-width: 768px) {
+    .menu-lateral {
+        width: 100%; /* Em telas menores, ocupa toda a largura */
+        margin-top: 0; /* Remove a margem superior */
+    }
+}
+
+/* ranking */
+
+.ranking-section {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.ranking-container {
+    margin-top: 20px;
+    border: 2px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.ranking-header {
+    background-color: #f0f0f0;
+    padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+}
+
+.ranking-header-item {
+    flex: 1;
+}
+
+.ranking-item {
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ranking-item:last-child {
+    border-bottom: none;
+}
+
+
